css/styles.css
/* ... */
.project-link:hover,
.project-link:focus-visible,
.about-button-wrapper:hover,
.about-button-wrapper:focus-visible {
    transform: scale(1.1);
}

.light #logo-link:hover #logo-container,
.light #logo-link:focus-visible #logo-container {
    background-image: url('/images/icons/logo-light-hover.png');
}

.dark #logo-link:hover #logo-container,
.dark #logo-link:focus-visible #logo-container {
    background-image: url('/images/icons/logo-dark-hover.png');
}

/* ============================================================================================================
                                                
                                            THEME TOGGLE

===============================================================================================================*/

.light {
    background-color: var(--white);
    color: var(--dark-blue);
    --fill: var(--dark-blue);
    --hover-fill:var(--dark-orange);
}

.dark {
    background-color: var(--dark-blue);
    color: var(--white);
    --fill: var(--white);
    --hover-fill: var(--yellow);
}

.light .pop-up-box {
    background-color: var(--dark-blue);
    color: var(--white);
}

.dark .pop-up-box {
    background-color: var(--white);
    color: var(--dark-blue);
}

.light a:hover,
.light a:focus-visible,
.light nav ul li:hover,
.light nav ul li:focus,
.light nav ul li:focus-visible {
    text-decoration-color: var(--dark-orange);
    color: var(--dark-orange);
}

.dark a:hover,
.dark a:focus-visible,
.dark nav ul li:hover,
.dark nav ul li:focus,
.dark nav ul li:focus-visible {
    text-decoration-color: var(--yellow);
    color: var(--yellow);
}

.light nav {
    background-color: var(--white);
}

.dark nav {
    background-color: var(--dark-blue);
}

/* .light.nav-link:before {
    background-color: var(--yellow);
}

.dark.nav-link:before {
    background-color: var(--yellow)
} */

.dark .photo-overlay a:hover,
.dark .photo-overlay a:focus-visible {
    background-color: var(--yellow);
    color: var(--white);
}

.light .photo-overlay a:hover,
.light .photo-overlay a:focus-visible {
    background-color: var(--dark-orange);
    color: var(--white);
}

.contact-icon-container:hover .contact-icon,
.contact-icon-container:focus-visible .contact-icon {
    fill: var(--hover-fill);
}

.light #logo-container {
    background-image: url('/images/icons/logo-light.png');
}

.dark #logo-container {
    background-image: url('/images/icons/logo-dark.png');
}

/* ============================================================================================================
                                                
                                            FONT TOGGLE

===============================================================================================================*/

body.roboto {
    font-family: 'Roboto', serif;
}

body.quicksand {
    font-family: 'Quicksand', sans-serif;
}

/* ============================================================================================================
                                                
                                        RESPONSIVE FONT-SIZING

===============================================================================================================*/

h1 {
    font-size: clamp(2rem, 3.9vw, 2.5rem);
}

p {
    font-size: clamp(.9rem, 2.3vw, 1.25rem);
}

footer p {
    font-size: clamp(0.75rem, 1.6vw, 1rem);
}

nav li {
    font-size: clamp(2rem, 4.7vw, 3rem);
}

.header-icon {
    font-size: clamp(1.75rem, 3.5vw, 2.25rem);
}

.home h1 {
    font-size: clamp(1.3rem, 3.5vw, 2.25rem);
}

#full-name {
    font-size: clamp(1.75rem, 4.7vw, 3rem);
}

#nickname {
    font-size: clamp(2rem, 5.5vw, 3.5rem);
}

.home h2 {
    font-size: clamp(1.1rem, 2.8vw, 1.8rem);
}

.about-button,
.home-link {
    font-size: clamp(1.2rem, 3vw, 1.9rem);
}

.photo-overlay h2 {
    font-size: clamp(1.3rem, 2.3vw, 1.5rem);
}

.photo-overlay a {
    font-size: clamp(1rem, 1.9vw , 1.2rem);
}
.photo-overlay p {
    font-size: clamp(.9rem, 1.7vw, 1.1rem);
}

.pop-up-p {
    font-size: .9rem;
    font-weight: 400;
}

.modal-close-icon {
    font-size: 20px;
    padding: 10px;
}

/* ============================================================================================================
                                                
                                        HEADER/FOOTER STYLING

===============================================================================================================*/

header,
footer {
    padding: 6vh 6vw;
}

footer {
    flex-direction: column;
}

.header-left,
.header-right {
    width: 50%;
}

.header-left {
    float: left;
}

.header-right {
    float: right;
}

.header-right ul {
    display: flex;
    justify-content: flex-end;
    list-style-type: none;
    align-items: center;
}

.toggle-button {
    margin-right: 30px;
}

#logo-link,
#logo-container {
    width: 50px;
    height: 50px;
}

#logo-container {
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    transition: background-image 0.3s ease;
}

.home #logo-link {
  pointer-events: none;
  cursor: default;
}

#logo-link {
    display: inline-block;
    height: 100%;
    width: 100%;
}

.header-button {
    height: 22px;
    width: fit-content;
}

#compass-icon {
    display: none;
}

/* ============================================================================================================
                                                
                                            NAV STYLING

===============================================================================================================*/

nav {
    display: none;
    justify-content: center;
    align-items: center;
    opacity: 0;
    transform: translateY(-20px);
    pointer-events: none;
    transition: opacity 0.4s ease, transform 0.4s ease;
    position: fixed;
    inset: 0;
    z-index: 2;
}
/* ... */

